spade-tests/src/snapshots/spade_tests__parser__missing_pipeline_depth_error.snap
---
source: spade-tests/src/parser.rs
---
entity a() -> bool {
    inst() x()
}


error: expected pipeline depth, got `)`
  ┌─ testinput:2:10
  │
2 │     inst() x()
  │          ^ expected pipeline depth here
